first working version

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,25 @@
 
 macBook_pro-tcp192168178451883/.lck
 /dist/
+build/classes/gui/mqtt.png
+build/classes/gui/.TracerFrame.class.icloud
+build/classes/gui/.TracerFrame$9.class.icloud
+build/classes/gui/.TracerFrame$8.class.icloud
+build/classes/gui/.TracerFrame$7.class.icloud
+build/classes/gui/.TracerFrame$6.class.icloud
+build/classes/gui/.TracerFrame$5.class.icloud
+build/classes/gui/.TracerFrame$4.class.icloud
+build/classes/gui/.TracerFrame$3.class.icloud
+build/classes/gui/.TracerFrame$2.class.icloud
+build/classes/gui/.TracerFrame$12.class.icloud
+build/classes/gui/.TracerFrame$11.class.icloud
+build/classes/gui/.TracerFrame$10.class.icloud
+build/classes/gui/.TracerFrame$1.class.icloud
+macbookpro-tcp192168178451883/.lck
+macBook_pro-tcp192168178451883 2/.lck
+build/classes/gui/MqttStarter.form
+build/classes/gui/MqttStarter 2.form
+imac-tcp192168178451883/.lck
+build/classes/gui/XMLFrame.form
+build/classes/gui/TracerFrame.form
+build/classes/gui/mqtt_icon_128px.png
