first working version of the XmlFrame
still some issues with disconnection of the mqtt client.

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,5 @@ imac-tcp192168178451883/.lck
 build/classes/gui/XMLFrame.form
 build/classes/gui/TracerFrame.form
 build/classes/gui/mqtt_icon_128px.png
+build/classes/gui/XMLFrame.form
+build/classes/gui/TracerFrame.form
