--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,4 @@ build/classes/gui/TracerFrame.form
 build/classes/gui/mqtt_icon_128px.png
 build/classes/gui/XMLFrame.form
 build/classes/gui/TracerFrame.form
+src/data/ToolSets.java
