improved publication handling
removed the text field based handling of publications and add a combo box

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,4 @@ build/classes/gui/mqtt_icon_128px.png
 build/classes/gui/XMLFrame.form
 build/classes/gui/TracerFrame.form
 src/data/ToolSets.java
+build/classes/gui/XMLFrame.form
