renamed and cleanup

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -3,7 +3,7 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=MQTTracer
+application.title=MQTTools
 application.vendor=stephan_wink
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
@@ -25,11 +25,11 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/MQTTracer.jar
+dist.jar=${dist.dir}/MQTTools.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.org.eclipse.paho.client.mqttv3-1.2.2.jar=/Volumes/Macintosh HD/Users/stephan_wink/Documents/magenta_cloud/MagentaCLOUD/Dokumente/workspace_netbeans/paho/org.eclipse.paho.client.mqttv3-1.2.2.jar
+file.reference.org.eclipse.paho.client.mqttv3-1.2.2.jar=../../../../Volumes/Macintosh HD/Users/stephan_wink/Documents/magenta_cloud/MagentaCLOUD/Dokumente/workspace_netbeans/paho/org.eclipse.paho.client.mqttv3-1.2.2.jar
 includes=**
 jar.compress=false
 javac.classpath=\
